--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-flask_cors==3.0.8
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+blinker==1.7.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
+Flask-Cors==3.0.8
+Flask-JWT-Extended==4.6.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+marqo==3.2.1
+minio==7.2.5
+packaging==24.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pycparser==2.22
+pycryptodome==3.20.0
+pydantic==1.10.15
+PyJWT==2.8.0
+python-dotenv==1.0.1
+requests==2.31.0
+six==1.16.0
+typing_extensions==4.11.0
+urllib3==1.26.18
+Werkzeug==3.0.2
