--- a/requirements.txt
+++ b/requirements.txt
@@ -5,25 +5,46 @@ certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+filelock==3.13.4
 Flask==3.0.3
 Flask-Cors==3.0.8
 Flask-JWT-Extended==4.6.0
+fsspec==2024.3.1
+huggingface-hub==0.22.2
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.3
+joblib==1.4.0
 MarkupSafe==2.1.5
 marqo==3.2.1
 minio==7.2.5
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
 packaging==24.0
+pillow==10.3.0
+pinecone-client==3.2.2
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pycparser==2.22
 pycryptodome==3.20.0
 pydantic==1.10.15
 PyJWT==2.8.0
+PyPDF2==3.0.1
 python-dotenv==1.0.1
+PyYAML==6.0.1
+regex==2024.4.16
 requests==2.31.0
+safetensors==0.4.3
+scikit-learn==1.4.2
+scipy==1.13.0
 six==1.16.0
+sympy==1.12
+threadpoolctl==3.4.0
+tokenizers==0.19.1
+torch==2.2.2
+tqdm==4.66.2
+transformers==4.40.0
 typing_extensions==4.11.0
 urllib3==1.26.18
 Werkzeug==3.0.2
