--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ argon2-cffi-bindings==21.2.0
 attrs==23.2.0
 bech32==1.2.0
 blinker==1.7.0
+cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -19,9 +20,17 @@ Flask-Cors==3.0.8
 Flask-JWT-Extended==4.6.0
 frozenlist==1.4.1
 fsspec==2024.3.1
+google-ai-generativelanguage==0.6.2
+google-api-core==2.18.0
+google-api-python-client==2.126.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.2
 googleapis-common-protos==1.63.0
 grpcio==1.62.2
+grpcio-status==1.62.2
 h11==0.14.0
+httplib2==0.22.0
 huggingface-hub==0.22.2
 idna==3.7
 itsdangerous==2.2.0
@@ -40,14 +49,19 @@ numpy==1.26.4
 packaging==24.0
 pillow==10.3.0
 pinecone-client==3.2.2
+proto-plus==1.23.0
 protobuf==4.25.3
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pycryptodome==3.20.0
 pydantic==1.10.15
 PyJWT==2.8.0
+pyparsing==3.1.2
 PyPDF2==3.0.1
+pypdfium2==4.29.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.1
@@ -55,6 +69,7 @@ referencing==0.34.0
 regex==2024.4.16
 requests==2.31.0
 rpds-py==0.18.0
+rsa==4.9
 safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
@@ -67,6 +82,8 @@ tqdm==4.66.2
 transformers==4.40.0
 typing_extensions==4.11.0
 uagents==0.11.1
+uagents-ai-engine==0.1.6
+uritemplate==4.1.1
 urllib3==1.26.18
 uvicorn==0.20.0
 websockets==10.4
